--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
         <h1 class="display-4 text-center my-6">Product Review Analysis</h1>
     </div>
     
-    <div style="display: flex;" class="row">
-        <div class="col m-5 justify-content-center">
+    <div style="display: flex" class="row">
+        <div class="col m-2 productImg">
             <img src="../static/products/product1.jpg" height="500px" width="500px" class="rounded float-left"
                 alt="product image">
         </div>
